--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,15 @@
 <h1>Articles</h1>
+
+<%= link_to "New", new_article_path %>
+
+<% if @articles.empty? %>
+
+	<p>no articles right now</p>
+
+<% else %>
+
+	<% @articles.each do |article| %>	
+		<%= link_to "#{article.title}", article_path(article.id) %>
+	<% end %>
+
+<% end %>
