--- a/app/views/opinions/show.html.erb
+++ b/app/views/opinions/show.html.erb
@@ -9,7 +9,7 @@
 	<%= form_for @comment do |c| %>
 			<%= c.label :body  %>
 			<%= c.text_field :body  %>
-			<%= c.hidden_field :user_id, :value => current_user.id %>
+			<%= c.hidden_field :article_id, :value => current_user.id %>
 			<%= c.hidden_field :opinion_id, :value => @opinion.id %>
 			<% c.submit %>
 	<% end %>
