add bootstrap to the project

--- a/app/views/opinions/show.html.erb
+++ b/app/views/opinions/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Back", opinions_path  %>
 <%= @opinion.title  %>
 <%= @opinion.body  %>
-
+<%= @opinion.user.user_name %>
 
 
 <% if user_signed_in? %>
